# fantasy-gm-assistant-n0fwii

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  backend.yml  ios.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/aws/: cloudfront.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  kms.tf  lambda.tf  outputs.tf  provider.tf  rds.tf  route53.tf  s3.tf  sqs.tf  variables.tf  versions.tf  vpc.tf  waf.tf
infrastructure/firebase/: firebase.json  firestore.rules  storage.rules
infrastructure/monitoring/: datadog.tf  grafana.tf  outputs.tf  prometheus.tf  provider.tf  variables.tf  versions.tf
infrastructure/scripts/: backup.sh  deploy.sh  init.sh  migrate.sh  monitor.sh  rollback.sh  scale.sh  setup.sh  (+2 more)
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/backend/app/: __init__.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  lineups.py  media.py  players.py  simulations.py  teams.py  trades.py  users.py
src/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  security.py
src/backend/app/ml/: __init__.py  data_preprocessing.py  feature_engineering.py  model_training.py  monte_carlo.py  predictive_models.py
src/backend/app/models/: __init__.py  analytics.py  lineup.py  media.py  player.py  simulation.py  team.py  trade.py  user.py
src/backend/app/schemas/: __init__.py  analytics.py  lineup.py  media.py  player.py  simulation.py  team.py  trade.py  user.py
src/backend/app/services/: __init__.py  elevenlabs_service.py  espn_service.py  firebase_service.py  gpt_service.py  redis_service.py  runwayml_service.py  s3_service.py  sleeper_service.py  sportradar_service.py
src/backend/app/utils/: __init__.py  constants.py  decorators.py  enums.py  helpers.py  validators.py
src/backend/app/workers/: __init__.py  analytics_tasks.py  celery_app.py  media_tasks.py  simulation_tasks.py
src/backend/migrations/: __init__.py  env.py  script.py.mako
src/backend/scripts/: __init__.py  create_superuser.py  generate_openapi.py  run_migrations.py  seed_data.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_auth.py  test_lineups.py  test_players.py  test_simulations.py  test_teams.py  test_trades.py  test_users.py
src/backend/tests/test_ml/: __init__.py  test_feature_engineering.py  test_monte_carlo.py  test_predictive_models.py
src/backend/tests/test_services/: __init__.py  test_elevenlabs_service.py  test_espn_service.py  test_gpt_service.py  test_runwayml_service.py  test_sleeper_service.py  test_sportradar_service.py
src/backend/tests/test_workers/: __init__.py  test_analytics_tasks.py  test_media_tasks.py  test_simulation_tasks.py
(+218 files in other folders)
